# SatModemApi

./: .gitignore  WebApi.yml  build  fix_enums  generate  generate_perl
SkytracApi/: CMakeLists.txt  README.md
SkytracApi/.openapi-generator/: FILES
SkytracApi/api/: ConfigurationAPI.c  ConfigurationAPI.h  DeviceAPI.c  DeviceAPI.h  EventsAPI.c  EventsAPI.h  NotificationsAPI.c  NotificationsAPI.h  SessionAPI.c  SessionAPI.h  StartupConfigurationAPI.c  StartupConfigurationAPI.h  UserAPI.c  UserAPI.h  UsersAPI.c  UsersAPI.h
SkytracApi/docs/: ConfigurationAPI.md  DeviceAPI.md  EventsAPI.md  NotificationsAPI.md  SessionAPI.md  StartupConfigurationAPI.md  UserAPI.md  UsersAPI.md  _device_fw_last_update_result_get_200_response.md  _device_fw_update_post_200_response.md  _device_ird_fw_slot__slot__get_200_response.md  _session_refresh_post_200_response.md  _sessions_post_201_response.md  _socket_get_200_response.md  _socket_get_200_response_one_of.md  _socket_get_200_response_one_of_1.md  _socket_get_200_response_one_of_2.md  _socket_get_200_response_one_of_3.md  _user_change_password_post_request.md  certificate.md  cfg_type.md  client.md  configuration_request.md  configuration_request_gps.md  configuration_request_ird.md  configuration_request_outgoing_firewall.md  configuration_request_port_fwd.md  configuration_response.md  configuration_response_gps.md  configuration_response_ird.md  configuration_response_outgoing_firewall.md  configuration_response_port_fwd.md  data_usage_entry.md  device_info.md  dhcp_range.md  dns_settings_request.md  dns_settings_response.md  eth_settings_request.md  eth_settings_request_dhcp.md  eth_settings_response.md  (+22 more)
SkytracApi/include/: apiClient.h
SkytracApi/model/: _device_fw_last_update_result_get_200_response.c  _device_fw_last_update_result_get_200_response.h  _device_fw_update_post_200_response.c  _device_fw_update_post_200_response.h  _device_ird_fw_slot__slot__get_200_response.c  _device_ird_fw_slot__slot__get_200_response.h  _session_refresh_post_200_response.c  _session_refresh_post_200_response.h  _sessions_post_201_response.c  _sessions_post_201_response.h  _socket_get_200_response.c  _socket_get_200_response.h  _socket_get_200_response_one_of.c  _socket_get_200_response_one_of.h  _socket_get_200_response_one_of_1.c  _socket_get_200_response_one_of_1.h  _socket_get_200_response_one_of_2.c  _socket_get_200_response_one_of_2.h  _socket_get_200_response_one_of_3.c  _socket_get_200_response_one_of_3.h  _user_change_password_post_request.c  _user_change_password_post_request.h  certificate.c  certificate.h  cfg_type.c  cfg_type.h  client.c  client.h  configuration_request.c  configuration_request.h  configuration_request_gps.c  configuration_request_gps.h  configuration_request_ird.c  configuration_request_ird.h  configuration_request_outgoing_firewall.c  configuration_request_outgoing_firewall.h  configuration_request_port_fwd.c  configuration_request_port_fwd.h  configuration_response.c  configuration_response.h  (+68 more)
SkytracApi/src/: apiClient.c
SkytracApi/unit-test/: test__device_fw_last_update_result_get_200_response.c  test__device_fw_update_post_200_response.c  test__device_ird_fw_slot__slot__get_200_response.c  test__session_refresh_post_200_response.c  test__sessions_post_201_response.c  test__socket_get_200_response.c  test__socket_get_200_response_one_of.c  test__socket_get_200_response_one_of_1.c  test__socket_get_200_response_one_of_2.c  test__socket_get_200_response_one_of_3.c  test__user_change_password_post_request.c  test_certificate.c  test_cfg_type.c  test_client.c  test_configuration_request.c  test_configuration_request_gps.c  test_configuration_request_ird.c  test_configuration_request_outgoing_firewall.c  test_configuration_request_port_fwd.c  test_configuration_response.c  test_configuration_response_gps.c  test_configuration_response_ird.c  test_configuration_response_outgoing_firewall.c  test_configuration_response_port_fwd.c  test_data_usage_entry.c  test_device_info.c  test_dhcp_range.c  test_dns_settings_request.c  test_dns_settings_response.c  test_eth_settings_request.c  test_eth_settings_request_dhcp.c  test_eth_settings_response.c  test_event_name.c  test_get_user.c  test_gps_dyn_platform_model.c  test_gps_fix.c  test_ird_boot_info.c  test_ird_constellation.c  test_ird_hw.c  test_ird_hw_test_report.c  (+14 more)
SkytracApiPerl/: README.md
SkytracApiPerl/.openapi-generator/: FILES
SkytracApiPerl/docs/: Certificate.md  CfgType.md  Client.md  ConfigurationApi.md  ConfigurationRequest.md  ConfigurationRequestGps.md  ConfigurationRequestIrd.md  ConfigurationRequestOutgoingFirewall.md  ConfigurationRequestPortFwd.md  ConfigurationResponse.md  ConfigurationResponseGps.md  ConfigurationResponseIrd.md  ConfigurationResponseOutgoingFirewall.md  ConfigurationResponsePortFwd.md  DataUsageEntry.md  DeviceApi.md  DeviceFwLastUpdateResultGet200Response.md  DeviceFwUpdatePost200Response.md  DeviceInfo.md  DeviceIrdFwSlotSlotGet200Response.md  DhcpRange.md  DnsSettingsRequest.md  DnsSettingsResponse.md  EthSettingsRequest.md  EthSettingsRequestDhcp.md  EthSettingsResponse.md  EventName.md  EventsApi.md  GetUser.md  GpsDynPlatformModel.md  GpsFix.md  IrdBootInfo.md  IrdConstellation.md  IrdHw.md  IrdHwTestReport.md  IrdMode.md  IrdSettings.md  IrdSim.md  IrdState.md  Notification.md  (+22 more)
SkytracApiPerl/t/: CertificateTest.t  CfgTypeTest.t  ClientTest.t  ConfigurationApiTest.t  ConfigurationRequestGpsTest.t  ConfigurationRequestIrdTest.t  ConfigurationRequestOutgoingFirewallTest.t  ConfigurationRequestPortFwdTest.t  ConfigurationRequestTest.t  ConfigurationResponseGpsTest.t  ConfigurationResponseIrdTest.t  ConfigurationResponseOutgoingFirewallTest.t  ConfigurationResponsePortFwdTest.t  ConfigurationResponseTest.t  DataUsageEntryTest.t  DeviceApiTest.t  DeviceFwLastUpdateResultGet200ResponseTest.t  DeviceFwUpdatePost200ResponseTest.t  DeviceInfoTest.t  DeviceIrdFwSlotSlotGet200ResponseTest.t  DhcpRangeTest.t  DnsSettingsRequestTest.t  DnsSettingsResponseTest.t  EthSettingsRequestDhcpTest.t  EthSettingsRequestTest.t  EthSettingsResponseTest.t  (+36 more)
(+67 files in other folders)
